整理代码，清理warning